[add] 配置dockerfile信息和compose信息